# MeiPythonTemplate

./: README.md  __main__.py  pyproject.toml  requierements.txt
config/global.d/: logging.yaml
config/httpRequests.d/: 01_enaio_docviewer_delete.yaml  02_enaio_docviewer_WebInfo.yaml
config/project/: global.yaml  logging.py
module_api/: __init__.py  auth.py
module_api/routes/: log.py  prometheus.py
module_config/: class_configLoader.py
module_database/: class_databaseConnector.py
module_httpRequests/: class_httpRequest.py
modules/: globalConstants.py
templates/: templates.env
tests/: test_module_config.py  test_module_database.py  test_module_httpRequests.py
